<resources>
    <string name="app_name">TuckBox2008043</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="app_logo">app logo</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile</string>
    <string name="register">Register</string>
    <string name="error_password_required">"Password is required "</string>
    <string name="error_mobile_required">a valid mobile is required</string>
    <string name="error_first_name_required">"First name required "</string>
    <string name="error_last_name_required">Last name required</string>
    <string name="error_email_required">email is required</string>
    <string name="error_invalid_email">Enter a valid email</string>
    <string name="error_invalid_mobile">Enter a valid mobile</string>
    <string name="Cancel">Cancel</string>
    <string name="Place_an_Order">Place Order</string>
    <string name="Update_User_Details">Update Information</string>
    <string name="Current_Order">Current Order</string>
    <string name="Order_History">Order History</string>
    <string name="current_order">Current Order</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_info">User Info</string>
    <string name="select_delivery_window">Select Delivery Window</string>
    <string name="select_delivery_location">Delivery Location</string>
    <string name="select_your_meal">Select your Meal</string>
    <string name="place_order">Place Order</string>
    <string name="order_cutoff_note">Place order by 10.00am for delivery between 11.45–1.45</string>
    <string name="update_account">Update Account</string>
    <string name="Update">Update</string>
    <string name="address">Delivery Address</string>
    <string name="add_new_delivery_address">Add new delivery address</string>
</resources>