<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ServicesActivity"
    android:background="@color/background_dark">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/tuckbox_logo" />

    <TextView
        android:id="@+id/userMainWelcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/Place_an_Order"
        android:padding="12dp"
        android:textSize="16sp"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpdateUserDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/Update_User_Details"
        android:padding="12dp"
        android:textSize="16sp"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCurrentOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/Current_Order"
        android:padding="12dp"
        android:textSize="16sp"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOrderHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Order_History"
        android:padding="12dp"
        android:textSize="16sp"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>